@@ -1,3 +1,8 @@
+2010-10-22  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/tabs/util.jl: set-tab-adjustment function for tabbed-themes
+
+	* lisp/sawfish/wm/gaol.jl: added tabs/util to gaolled modules
+
 2010-10-21  Christopher Bratusek <zanghar@freenet.de>
 	* man/news.texi: fixed a typo
 	                 updated
